--- a/tomikuvzpevnik/templates/tomikuvzpevnik/editSong.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/editSong.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        {% load static %}   
-        <link rel="stylesheet" href=" {% static './style.css' %}">
-        <link rel="stylesheet" href=" {% static './editSong.css' %}">
-        <title>Tomíkův zpěvník</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div id="control">
-            <div >
-            <a href="./index.html" id ="return"><span class="back_span">⮌</span></a>
-            </div>
+<html lang="en">
+  <head>
+    {% load static %}
+    <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/style.css' %}" />
+    <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/editSong.css' %}" />
+    <title>Tomíkův zpěvník</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <div id="control">
+      <div>
+        <a href="{% url 'tomikuvzpevnik:index' %}" id="return"><span class="back_span">⮌</span></a>
+      </div>
+    </div>
+    <h2 style="text-align:center">Tomíkův zpěvník</h2>
+    <h3 style="text-align:center">&#127925; Edituj písničku &#127925;</h3>
+    <form action="" method="post">
+        {% csrf_token %}
+        {% if form.errors %}
+        <div id="err_list">
+        {{ form.errors }}
         </div>
-        <h2 style="text-align:center">Tomíkův zpěvník</h3>
-        <h3 style="text-align:center">&#127925; Edituj písničku &#127925;</h3>
-        <form action="handleEdit.html" method="get">
-            {% csrf_token %}
-            <div class="form">
-                <div id="form_name" class="input_field">
-                    {{ songForm.name.label_tag }}
-                    {{ songForm.name }}
-                </div>
-                <div id="form_auhor" class="input_field">
-                    {{ songForm.author.label_tag }}
-                    {{ songForm.author }}
-                </div>
-                <div id="form_owner" class="input_field">
-                    {{ songForm.owner.label_tag }}
-                    {{ songForm.owner }}
-                </div>
-                <div id="form_capo" class="input_field">
-                    {{ songForm.capo.label_tag }}
-                    {{ songForm.capo }}
-                </div>
-                <div id="form_text" class="input_field">
-                    {{ songForm.text.label_tag }}
-                    {{ songForm.text }}
-                </div>
-                <input type="submit" class="submit_button" value="Edituj!">
-            </div>
-            
-        </form>          
-    </body>
+        {% endif %}
+      <div class="form">
+        {% for field in form %}
+          <div class="input_field" id="form_{{ field.name }}"{% if field.errors %} style="background-color:#ffaaaa;border-radius:5px;" {% endif %}>
+            {{ field.label_tag }} {{ field }}</div>
+        {% endfor %}
+        <input type="submit" class="submit_button" value="Edituj!" />
+      </div>
+    </form>
+  </body>
 </html>
