--- a/tomikuvzpevnik/static/tomikuvzpevnik/menu.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/menu.css
@@ -1,13 +1,18 @@
 #sidebar {
     position: fixed;
-    background: var(--background2);
+    background: var(--background0);
     height: 100%;
     width: 200px;
     top: 0px;
     left: 0px;
-    z-index:1;
-    left:-200px;
-    transition:0.3s;
+    z-index: 1;
+    left: -200px;
+    transition: 0.3s;
+}
+
+#sidebar.active{
+    left:0px;
+    box-shadow: 0px 0px 10px #aaaaaa;
 }
 
 #sidebar_menu {
@@ -17,6 +22,7 @@
     position: relative;
     top: 10px;
     grid-row-gap: 10px;
+    padding: 10px;
 }
 
 .menu_button {
@@ -29,7 +35,7 @@
     box-sizing:border-box;
     height: 100%;
     text-align: center;
-    font-style: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu_item {
@@ -79,8 +85,4 @@
     backdrop-filter: blur(1px);
     height: 100%;
     width: 100%;
-}
-
-#sidebar.active{
-    left:0px;
 }
