--- a/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
@@ -2,16 +2,19 @@
     <html lang="en">
         <head>
             {% load static %}   
-            <link rel="stylesheet" href=" {% static './style.css' %}">
-            <link rel="stylesheet" href=" {% static './editSong.css' %}">
+            <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/utils.css' %}">
+            <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/editSong.css' %}">
             <title>Tomíkův zpěvník</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
         </head>
     <body>
-        <div id="control">
-            <div >
-            <a href="./index.html" id ="return"><span class="back_span">⮌</span></a>
+        <div id="header">
+            <div class="header-left">
+                <a href="{% url 'tomikuvzpevnik:index' %}" id="return" class="button_with_border"><span><img src=" {% static 'tomikuvzpevnik/icons/back_arrow.svg' %}" style="width:50%;height:50%;margin-top:17px;" /></span></a>
+            </div>
+            <div class="header-right">
+                
             </div>
         </div>
         <h2 style="text-align:center">Tomíkův zpěvník</h3>
