--- a/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
@@ -4,51 +4,41 @@
         {% load static %} 
         <script src="{% static 'tomikuvzpevnik/songList.js' %}"></script>   
         <link rel="shortcut icon" type="image/png" href="{% static 'tomikuvzpevnik/favicon.ico' %}"/>         
-        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/style.css' %}">
-        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/menu.css' %}">
-        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/dropdown.css' %}">
+        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/utils.css' %}">
+        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/songIndex.css' %}">
+        <link rel="stylesheet" href="{% static 'tomikuvzpevnik/sidebar.css' %}">
         <title>Tomíkův zpěvník</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="control" style="justify-items: center;grid-template-columns: 1fr 0.5fr 1fr;">
-            <div style="justify-self: start;">
-                <div class="button_no_border" id="open_pdf_menu">
+        <div id="control" class="header" style="justify-items: center;grid-template-columns: 1fr 0.5fr 1fr;">
+            <div class="header-left">
+                <a class="button_no_border" id="open_pdf_menu">
                     <img src="{% static 'tomikuvzpevnik/icons/pdf_songbook.svg' %}">
-                </div>
+                </a>
             </div>
-            <div class="button_no_border" style="justify-self: ceter;align-self:center">
-                <a href="./addSong.html" class="anchor"><span style="font-size:25px">+</span></a>
+            <div class="header-center">
+                <a href="{% url 'tomikuvzpevnik:song_add' %}" class="button_no_border square_medium"><span style="font-size:30px">+</span></a>
             </div>
-            <div style="justify-self: end;align-self:center">
-                <div class="button_no_border" id="account-button">
+            <div class="header-right">
+                <a class="button_no_border" id="account-button">
                     <img src="{% static 'tomikuvzpevnik/icons/account.svg' %}">
-                </div>
+                </a>
             </div>
         </div>
         <div id="hide"></div>
         <div id="sidebar">
             <div id="sidebar_menu">
-                <div class="menu_item">
-                    <div class="menu_button" id="close_pdf_menu">
-                        Zpět
-                    </div>
+                <div class="sidebar_button button_with_border" id="close_pdf_menu">
+                    Zpět
                 </div>
-                <div class="menu_item">
-                    <a href="./index.html?inProgress=1">
-                        <div class="menu_button">
-                            
-                        </div>
-                    </a>
-                </div>
-                <div class="menu_item">
-                    <a href="./handleDownload.html">
-                        <div class="menu_button">
-                            Stáhnout zpěvník v aktuální verzi
-                        </div>
-                    </a>
-                </div>
+                <a class="sidebar_button button_with_border">
+                    
+                </a>
+                <a class="sidebar_button button_with_border">
+                    Stáhnout zpěvník v aktuální verzi
+                </a>
             </div>
         </div>
         <h2 style="text-align:center">Tomíkův zpěvník</h3>
