Song addition from ultimate guitar

--- a/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
@@ -19,7 +19,7 @@
         </div>
         <h2 style="text-align:center">Tomíkův zpěvník</h3>
         <h3 style="text-align:center">&#127925; Přidej písničku &#127925;</h3>
-        <form action="addSong.html" method="post">
+        <form action="" method="post">
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="Submit">
