--- a/tomikuvzpevnik/templates/tomikuvzpevnik/editSong.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/editSong.html
@@ -15,7 +15,9 @@
         <a href="{% url 'tomikuvzpevnik:index' %}" id="return" class="button_with_border"><span><img src=" {% static 'tomikuvzpevnik/icons/back_arrow.svg' %}" style="width:50%;height:50%;margin-top:17px;" /></span></a>
       </div>
       <div id="header-right">
+        {% if song.pk > 0 %}
         <a href="{% url 'tomikuvzpevnik:song_delete' song.id %}" class="button_with_border square_medium"><span>Smazat</span></a>
+        {% endif %}
       </div>
     </div>
   </div>
