--- a/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
@@ -5,7 +5,7 @@
     width: 200px;
     top: 0px;
     left: 0px;
-    z-index: 1;
+    z-index: 20;
     left: -200px;
     transition: 0.3s;
 }
@@ -13,6 +13,29 @@
 #sidebar.active{
     left:0px;
     box-shadow: 0px 0px 10px #aaaaaa;
+}
+
+#sidebar.active{
+    left:0px;
+    box-shadow: 0px 0px 10px #aaaaaa;
+}
+
+#hide{
+    transition: 0.2s;
+    background:rgba(0,0,0,0);
+}
+
+#hide.active{
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background:rgba(0,0,0,0.05);
+    transition: 0s;
 }
 
 #sidebar_menu {
