--- a/tomikuvzpevnik/templates/registration/password_change_form.html
+++ b/tomikuvzpevnik/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends "registration/login_base.html" %}
 {% block content %}
-<h2>Přihlášení</h2>
+<h2>Změnit heslo</h2>
 <form method="post">
   {% csrf_token %}
   {{ form }}
