--- a/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
@@ -1,4 +1,4 @@
-#sidebar {
+#sidebar-left {
     position: fixed;
     background: var(--background0);
     height: 100%;
@@ -10,12 +10,12 @@
     transition: 0.3s;
 }
 
-#sidebar.active{
+#sidebar-left.active{
     left:0px;
     box-shadow: 0px 0px 10px #aaaaaa;
 }
 
-#sidebar.active{
+#sidebar-left.active{
     left:0px;
     box-shadow: 0px 0px 10px #aaaaaa;
 }
@@ -35,10 +35,10 @@
     height: 100%;
     z-index: 10;
     background:rgba(0,0,0,0.05);
-    transition: 0s;
+    transition: 0.5s;
 }
 
-#sidebar_menu {
+#sidebar-left_menu {
     display: grid;
     justify-content: center;
     grid-template-rows: repeat(3, 60px);
@@ -50,5 +50,37 @@
 
 .menu_item {
     width:100%;
+}
+
+#sidebar-right {
+    position: fixed;
+    background: var(--background0);
+    height: 100%;
+    width: 400px;
+    top: 0px;
+    right: -400px;
+    z-index: 20;
+    transition: 0.3s;
+}
+
+#sidebar-right.active{
+    right:0px;
+    box-shadow: 0px 0px 10px #aaaaaa;
+}
+
+#sidebar-right.active{
+    right:0px;
+    box-shadow: 0px 0px 10px #aaaaaa;
+}
+
+
+#sidebar-right_menu {
+    display: grid;
+    justify-content: center;
+    grid-template-rows: repeat(3, 60px);
+    position: relative;
+    top: 10px;
+    grid-row-gap: 10px;
+    padding: 10px;
 }
 
