--- a/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
@@ -23,13 +23,19 @@
                 <a href="{% url 'tomikuvzpevnik:song_add' %}" class="button_no_border square_medium"><span style="font-size:30px">+</span></a>
             </div>
             <div class="header-right">
-                <a class="button_no_border" id="account-button">
+                {% if user.is_authenticated %}
+                <a class="button_no_border square_medium" id="account-button">
                     <img src="{% static 'tomikuvzpevnik/icons/account.svg' %}">
                 </a>
+                {% else %}
+                <a href="{% url 'login' %}" class="button_no_border square_medium" id="account-button">
+                    <img src="{% static 'tomikuvzpevnik/icons/account.svg' %}">
+                </a>
+                {% endif %}
             </div>
         </div>
-        <div id="sidebar">
-            <div id="sidebar_menu">
+        <div id="sidebar-left">
+            <div id="sidebar-left_menu">
                 <div class="sidebar_button button_with_border" id="close_pdf_menu">
                     Zpět
                 </div>
@@ -41,6 +47,16 @@
                 </a>
             </div>
         </div>
+        {% if user.is_authenticated %}
+        <div id="sidebar-right">
+            <div id="sidebar-right_menu">
+                <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button class="sidebar_button button_with_border" type="submit">Odhlásit</button>
+                </form>
+            </div>
+        </div>
+        {% endif %}
         <h2 style="text-align:center">Tomíkův zpěvník</h3>
             <h3 style="text-align:center">&#127925; Seznam písniček &#127925;</h3>
             <div class="search">
