Minor UI updates

--- a/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
@@ -36,14 +36,14 @@
         </div>
         <div id="sidebar-left">
             <div id="sidebar-left_menu">
-                <div class="sidebar_button button_with_border" id="close_pdf_menu">
+                <a class="sidebar_button button_with_border" id="close_pdf_menu">
                     Zpět
-                </div>
+                </a>
                 <a class="sidebar_button button_with_border">
                     
                 </a>
                 <a class="sidebar_button button_with_border">
-                    Stáhnout zpěvník v aktuální verzi
+                    Stáhnout zpěvník <br> v aktuální verzi
                 </a>
             </div>
         </div>
